--- a/_attachments/style/main.css
+++ b/_attachments/style/main.css
@@ -15,6 +15,14 @@ div#main {
   padding: 5px 5px 5px 5px;
 }
 
+div#about {
+  background-color: white;
+  border-radius: 15px 15px 15px 15px;
+  margin-left: 15%;
+  padding: 5px;
+  width: 70%;
+}
+
 a {
   text-decoration: none;
 }
