Move to RCouch!

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,7 +2,7 @@
 </div>
 
 <div id="footer">
-  <p>Copyright &copy; Nicolas R Dufour 2004-2010</p>
-  <p>Powered by <a href="http://www.couchdb.org/">CouchDB</a> and <a href="http://www.couchapp.org/">CouchApp</a>.</p>
+  <p>Copyright &copy; Nicolas R Dufour 2004-2011</p>
+  <p>Powered by <a href="http://rcouch.refuge.io/">RCouch</a> and <a href="http://www.couchapp.org/">CouchApp</a>.</p>
 </div>
 
